Forgot password by omkar m

--- a/ui_files/Forgotpassword_sec_check.ui
+++ b/ui_files/Forgotpassword_sec_check.ui
@@ -16,48 +16,6 @@
   <property name="styleSheet">
    <string notr="true">background-color:#131239</string>
   </property>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>280</y>
-     <width>740</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 14pt &quot;Georgia&quot;;
-color: white;</string>
-   </property>
-   <property name="text">
-    <string>Security answer:</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="f_getpass">
-   <property name="geometry">
-    <rect>
-     <x>270</x>
-     <y>480</y>
-     <width>261</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="cursor">
-    <cursorShape>PointingHandCursor</cursorShape>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-padding:15px;
-background-color:green;
-color:white;</string>
-   </property>
-   <property name="text">
-    <string>Get Password</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
@@ -82,11 +40,28 @@ color:white;
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" name="f_answer">
+  <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>330</y>
+     <y>260</y>
+     <width>401</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;Georgia&quot;;
+color: white;</string>
+   </property>
+   <property name="text">
+    <string>Username:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="f_username">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>310</y>
      <width>400</width>
      <height>41</height>
     </rect>
@@ -106,10 +81,32 @@ background-color:white;</string>
     <string/>
    </property>
    <property name="placeholderText">
-    <string>Your Answer</string>
+    <string>Your Username</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="f_gotologin">
+  <widget class="QPushButton" name="f_continue">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>480</y>
+     <width>200</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
+padding:15px;
+background-color:green;
+color:white;</string>
+   </property>
+   <property name="text">
+    <string>Continue</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="f_goback">
    <property name="geometry">
     <rect>
      <x>330</x>
@@ -128,7 +125,27 @@ background-color:green;
 color:white;</string>
    </property>
    <property name="text">
-    <string>Go to Login</string>
+    <string>Back</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="f_responseerror">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>370</y>
+     <width>500</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 11pt &quot;Meiryo UI&quot;;
+color:red;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
