--- a/ui_files/gameframe.ui
+++ b/ui_files/gameframe.ui
@@ -63,7 +63,7 @@ color: white;</string>
   <widget class="QLabel" name="f_label_2">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>240</x>
      <y>20</y>
      <width>71</width>
      <height>31</height>
@@ -82,7 +82,7 @@ color: white;</string>
     <rect>
      <x>110</x>
      <y>20</y>
-     <width>21</width>
+     <width>60</width>
      <height>31</height>
     </rect>
    </property>
@@ -93,13 +93,16 @@ color: white;</string>
    <property name="text">
     <string>0</string>
    </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
   </widget>
   <widget class="QLabel" name="f_timer">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>330</x>
      <y>20</y>
-     <width>31</width>
+     <width>60</width>
      <height>31</height>
     </rect>
    </property>
@@ -109,6 +112,9 @@ color: white;</string>
    </property>
    <property name="text">
     <string>15</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QLabel" name="f_biglabel1">
