Credential validation by Omkar m

--- a/ui_files/Forgotpassword.ui
+++ b/ui_files/Forgotpassword.ui
@@ -131,6 +131,26 @@ color:white;</string>
     <string>Go to Login</string>
    </property>
   </widget>
+  <widget class="QLabel" name="f_responseerror">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>380</y>
+     <width>500</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 11pt &quot;Meiryo UI&quot;;
+color:red;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
