--- a/ui_files/chpassword_frame.ui
+++ b/ui_files/chpassword_frame.ui
@@ -182,7 +182,27 @@ background-color:white;</string>
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>470</y>
+     <y>460</y>
+     <width>500</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 11pt &quot;Meiryo UI&quot;;
+color:red;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="f_response1">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>350</y>
      <width>500</width>
      <height>30</height>
     </rect>
