combo box background by Omkar M

--- a/ui_files/profile_frame.ui
+++ b/ui_files/profile_frame.ui
@@ -123,49 +123,6 @@ color:white;</string>
     <string>Answer:</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="f_scque">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>290</y>
-     <width>400</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color:white;
-padding:0px 10px 0px 10px;
-border-radius:5px;
-border:3px solid lightgreen;
-</string>
-   </property>
-   <property name="editable">
-    <bool>false</bool>
-   </property>
-   <property name="placeholderText">
-    <string>select Questions</string>
-   </property>
-   <item>
-    <property name="text">
-     <string>What is your favourite color?</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Which is the name of your favourite book?</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>What is your favourite subject?</string>
-    </property>
-   </item>
-  </widget>
   <widget class="QLineEdit" name="f_scans">
    <property name="geometry">
     <rect>
@@ -272,6 +229,39 @@ color:red;</string>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
+  </widget>
+  <widget class="QComboBox" name="f_security_ques">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>290</y>
+     <width>400</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">padding:0px 10px 0px 10px;
+border-radius:5px;
+border:3px solid lightgreen;
+background-color:white;
+font: 12pt &quot;MS Shell Dlg 2&quot;;
+</string>
+   </property>
+   <item>
+    <property name="text">
+     <string>Which is your favourite color?</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Which is your favourite book?</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Which is your favourite subject?</string>
+    </property>
+   </item>
   </widget>
  </widget>
  <resources/>
