--- a/ui_files/level_and_skin2.ui
+++ b/ui_files/level_and_skin2.ui
@@ -509,7 +509,7 @@ border-radius:5px;</string>
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>../Mallet images/8.png</normaloff>../Mallet images/8.png</iconset>
+     <normaloff>../Mallet images/3.png</normaloff>../Mallet images/3.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -518,7 +518,7 @@ border-radius:5px;</string>
     </size>
    </property>
   </widget>
-  <widget class="QLabel" name="label_6">
+  <widget class="QLabel" name="s1_label">
    <property name="geometry">
     <rect>
      <x>130</x>
@@ -538,7 +538,7 @@ color:white;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
+  <widget class="QLabel" name="s2_label">
    <property name="geometry">
     <rect>
      <x>320</x>
@@ -558,7 +558,7 @@ color:white;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_8">
+  <widget class="QLabel" name="s3_label">
    <property name="geometry">
     <rect>
      <x>530</x>
@@ -599,7 +599,7 @@ border-radius:5px;</string>
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>../Mallet images/6.png</normaloff>../Mallet images/6.png</iconset>
+     <normaloff>../Mallet images/4.png</normaloff>../Mallet images/4.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -659,7 +659,7 @@ border-radius:5px;</string>
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>../Mallet images/7.png</normaloff>../Mallet images/7.png</iconset>
+     <normaloff>../Mallet images/6.png</normaloff>../Mallet images/6.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -689,7 +689,7 @@ border-radius:5px;</string>
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>../Mallet images/4.png</normaloff>../Mallet images/4.png</iconset>
+     <normaloff>../Mallet images/7.png</normaloff>../Mallet images/7.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -719,7 +719,7 @@ border-radius:5px;</string>
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>../Mallet images/9.png</normaloff>../Mallet images/9.png</iconset>
+     <normaloff>../Mallet images/8.png</normaloff>../Mallet images/8.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -749,7 +749,7 @@ border-radius:5px;</string>
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>../Mallet images/3.png</normaloff>../Mallet images/3.png</iconset>
+     <normaloff>../Mallet images/9.png</normaloff>../Mallet images/9.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -758,7 +758,7 @@ border-radius:5px;</string>
     </size>
    </property>
   </widget>
-  <widget class="QLabel" name="label_9">
+  <widget class="QLabel" name="s4_label">
    <property name="geometry">
     <rect>
      <x>110</x>
@@ -778,7 +778,7 @@ color:white;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_10">
+  <widget class="QLabel" name="s5_label">
    <property name="geometry">
     <rect>
      <x>320</x>
@@ -798,7 +798,7 @@ color:white;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_11">
+  <widget class="QLabel" name="s6_label">
    <property name="geometry">
     <rect>
      <x>530</x>
@@ -818,7 +818,7 @@ color:white;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_12">
+  <widget class="QLabel" name="s7_label">
    <property name="geometry">
     <rect>
      <x>110</x>
@@ -838,7 +838,7 @@ color:white;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_13">
+  <widget class="QLabel" name="s8_label">
    <property name="geometry">
     <rect>
      <x>320</x>
@@ -858,7 +858,7 @@ color:white;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_14">
+  <widget class="QLabel" name="s9_label">
    <property name="geometry">
     <rect>
      <x>530</x>
