--- a/ui_files/Signuppage.ui
+++ b/ui_files/Signuppage.ui
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>100</y>
+     <y>80</y>
      <width>211</width>
      <height>51</height>
     </rect>
@@ -46,7 +46,7 @@ color:white;</string>
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>530</y>
+     <y>570</y>
      <width>271</width>
      <height>41</height>
     </rect>
@@ -63,7 +63,7 @@ color:white;</string>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>420</y>
+     <y>460</y>
      <width>291</width>
      <height>71</height>
     </rect>
@@ -80,7 +80,7 @@ color:white;</string>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>200</y>
+     <y>160</y>
      <width>251</width>
      <height>51</height>
     </rect>
@@ -97,7 +97,7 @@ color:white;</string>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>300</y>
+     <y>360</y>
      <width>241</width>
      <height>51</height>
     </rect>
@@ -145,7 +145,7 @@ color:white;
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>140</y>
+     <y>120</y>
      <width>400</width>
      <height>41</height>
     </rect>
@@ -169,7 +169,7 @@ background-color:white;</string>
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>570</y>
+     <y>610</y>
      <width>355</width>
      <height>41</height>
     </rect>
@@ -193,7 +193,7 @@ background-color:white;</string>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>470</y>
+     <y>510</y>
      <width>400</width>
      <height>41</height>
     </rect>
@@ -220,7 +220,7 @@ background-color:white;</string>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>340</y>
+     <y>400</y>
      <width>400</width>
      <height>41</height>
     </rect>
@@ -248,7 +248,7 @@ background-color:white;
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>240</y>
+     <y>200</y>
      <width>400</width>
      <height>41</height>
     </rect>
@@ -272,7 +272,7 @@ background-color:white;</string>
    <property name="geometry">
     <rect>
      <x>275</x>
-     <y>700</y>
+     <y>720</y>
      <width>250</width>
      <height>61</height>
     </rect>
@@ -296,7 +296,7 @@ color:white;
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>640</y>
+     <y>680</y>
      <width>241</width>
      <height>31</height>
     </rect>
@@ -324,8 +324,8 @@ color:white;</string>
   <widget class="QPushButton" name="f_goto_login">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>640</y>
+     <x>470</x>
+     <y>680</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -351,59 +351,11 @@ font: 75 15pt &quot;Courier&quot;;</string>
     <string>Login</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_R1">
-   <property name="geometry">
-    <rect>
-     <x>370</x>
-     <y>120</y>
-     <width>91</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color:red;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_R5">
-   <property name="geometry">
-    <rect>
-     <x>370</x>
-     <y>410</y>
-     <width>91</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color:red;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
   <widget class="QLabel" name="f_responseerror">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>280</y>
+     <y>250</y>
      <width>500</width>
      <height>28</height>
     </rect>
@@ -423,7 +375,7 @@ color:red;</string>
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>610</y>
+     <y>660</y>
      <width>500</width>
      <height>28</height>
     </rect>
@@ -443,7 +395,7 @@ color:red;</string>
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>510</y>
+     <y>550</y>
      <width>500</width>
      <height>28</height>
     </rect>
@@ -463,7 +415,7 @@ color:red;</string>
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>380</y>
+     <y>440</y>
      <width>491</width>
      <height>41</height>
     </rect>
@@ -486,7 +438,7 @@ color:white;</string>
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>570</y>
+     <y>610</y>
      <width>355</width>
      <height>41</height>
     </rect>
@@ -515,6 +467,92 @@ font: 10pt &quot;MS Shell Dlg 2&quot;;
     </property>
    </item>
   </widget>
+  <widget class="QLineEdit" name="f_email">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>300</y>
+     <width>400</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">padding:0px 10px 0px 10px;
+border-radius:5px;
+border:3px solid lightgreen;
+background-color:white;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>Your Email</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_Username_2">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>260</y>
+     <width>251</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 15pt &quot;Georgia&quot;;
+color:white;</string>
+   </property>
+   <property name="text">
+    <string>Email:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="f_responseerror_2">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>340</y>
+     <width>500</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 10pt &quot;Meiryo UI&quot;;
+color:red;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <zorder>label_Name</zorder>
+  <zorder>label_S_Question</zorder>
+  <zorder>label_Con_Password</zorder>
+  <zorder>label_Username</zorder>
+  <zorder>label_Password</zorder>
+  <zorder>labelHeading</zorder>
+  <zorder>f_name</zorder>
+  <zorder>f_answer</zorder>
+  <zorder>f_pass2</zorder>
+  <zorder>f_pass1</zorder>
+  <zorder>f_uname</zorder>
+  <zorder>f_create_account</zorder>
+  <zorder>label_2</zorder>
+  <zorder>f_goto_login</zorder>
+  <zorder>f_responseerror</zorder>
+  <zorder>f_responseerror1</zorder>
+  <zorder>f_responseerror2</zorder>
+  <zorder>f_responseerror2_2</zorder>
+  <zorder>f_security_ques</zorder>
+  <zorder>label_Username_2</zorder>
+  <zorder>f_email</zorder>
+  <zorder>f_responseerror_2</zorder>
  </widget>
  <resources/>
  <connections/>
