--- a/ui_files/Forgotpassword.ui
+++ b/ui_files/Forgotpassword.ui
@@ -39,10 +39,10 @@ color: white;</string>
   <widget class="QPushButton" name="f_getpass">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>480</y>
-     <width>261</width>
-     <height>61</height>
+     <x>275</x>
+     <y>550</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="cursor">
@@ -50,7 +50,7 @@ color: white;</string>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-padding:15px;
+padding:0px 5px 0px 5px;
 background-color:green;
 color:white;</string>
    </property>
@@ -112,10 +112,10 @@ background-color:white;</string>
   <widget class="QPushButton" name="f_gotologin">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>570</y>
-     <width>141</width>
-     <height>61</height>
+     <x>320</x>
+     <y>660</y>
+     <width>160</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="cursor">
@@ -123,7 +123,7 @@ background-color:white;</string>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 16pt &quot;Arial Rounded MT Bold&quot;;
-padding:15px;
+padding:0px 5px 0px 5px;
 background-color:green;
 color:white;</string>
    </property>
@@ -136,6 +136,70 @@ color:white;</string>
     <rect>
      <x>160</x>
      <y>380</y>
+     <width>500</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 11pt &quot;Meiryo UI&quot;;
+color:red;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>410</y>
+     <width>211</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;Georgia&quot;;
+color: white;</string>
+   </property>
+   <property name="text">
+    <string>Enter Your Email ID</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="f_emailid">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>450</y>
+     <width>400</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">padding:0px 10px 0px 10px;
+border-radius:5px;
+border:3px solid lightgreen;
+background-color:white;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>Your Email ID</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="f_responseerror_2">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>500</y>
      <width>500</width>
      <height>30</height>
     </rect>
